--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
