--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
+    "eslint-config-airbnb-standard": "^1.6.6",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "style-loader": "^0.19.1"
