Removed eslint errors.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-  "extends": ["airbnb-standard"]
+  "parser": "babel-eslint",
+  "extends": "airbnb",
+  "plugins": ["react", "jsx-ally", "import"]
 }
