--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "author": "Sudeep Tarlekar",
   "scripts": {
     "test": "",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack.dev.config.js"
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack.dev.config.js",
+    "flow start": "flow start",
+    "flow stop": "flow stop",
+    "flow status": "flow status",
+    "flow coverage": "flow coverage"
   },
   "repository": {
     "type": "git",
@@ -41,17 +45,25 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
-    "eslint-config-airbnb-standard": "^1.6.6",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "prettier": "^1.9.2",
+    "prettier-eslint": "^8.5.0",
     "style-loader": "^0.19.1"
   }
 }
